--- a/Programmania/Views/Home/Profile.cshtml
+++ b/Programmania/Views/Home/Profile.cshtml
@@ -9,17 +9,19 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"></script>
 
     <link rel="stylesheet" href="~/css/highlight styles/default.min.css">
-    <script src="~/js/highlight.min.js"></script>
+    <script src="~/css/highlight.min.js"></script>
     <script>hljs.highlightAll();</script>
+
+
 
     <link rel="stylesheet" href="~/css/HamburgerMenu.css">
     <link rel="stylesheet" href="~/css/Profile.css">
 
-
+    <link rel="stylesheet" href="~/css/loading-bar.min.css">
+    <script src="~/js/loading-bar.min.js"></script>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
-    <script type="text/javascript" src="~/js/jQuery-plugin-progressbar.js"></script>
 </head>
 
 <body>
@@ -109,6 +111,10 @@
                                 <div class="row">
                                     <button type="button" class="btn btn-success" id="changeAvatarBtn">Change Avatar</button>
                                 </div>
+                                <hr>
+                                <div class="row">
+                                    <button type="button" class="btn btn-danger" id="deleteAvatarBtn">Delete Avatar</button>
+                                </div>
                             </div>
                         </div>
 
@@ -190,11 +196,11 @@
                                 <div class="coursesList__item">
                                     <div class="coursesList__item__hover">
                                         <div class="coursesList__item__hover__body">
-                                            <h3>Lessons count: 23</h3>
-                                            <h3>Progress: 12%</h3>
-                                            <h3>Completed lessons: 5/23</h3>
-                                            <h3>People opened this course: 130</h3>
-                                            <h3>Earn XP: 3000</h3>
+                                            <h3>In progress</h3>
+                                            <div class="roundedPb">
+
+                                            </div>
+                                            <h3>Completed courses: 50/100</h3>
                                         </div>
                                     </div>
 
@@ -203,54 +209,12 @@
                                     </div>
 
                                     <div class="coursesList__item__body">
-                                        <h3 class="coursesList__item__body__header">Java Course</h3>
+                                        <h3 class="coursesList__item__body__header">Java</h3>
                                     </div>
                                 </div>
                             </a>
 
-                            <a href="#">
-                                <div class="coursesList__item">
-                                    <div class="coursesList__item__hover">
-                                        <div class="coursesList__item__hover__body">
-                                            <h3>Lessons count: 23</h3>
-                                            <h3>Progress: 12%</h3>
-                                            <h3>Completed lessons: 5/23</h3>
-                                            <h3>People opened this course: 130</h3>
-                                            <h3>Earn XP: 3000</h3>
-                                        </div>
-                                    </div>
 
-                                    <div class="coursesList__item__image">
-                                        <img src="../Images/JSLogo.png" alt="">
-                                    </div>
-
-                                    <div class="coursesList__item__body">
-                                        <h3 class="coursesList__item__body__header">Java Script</h3>
-                                    </div>
-                                </div>
-                            </a>
-
-                            <a href="#">
-                                <div class="coursesList__item">
-                                    <div class="coursesList__item__hover">
-                                        <div class="coursesList__item__hover__body">
-                                            <h3>Lessons count: 23</h3>
-                                            <h3>Progress: 12%</h3>
-                                            <h3>Completed lessons: 5/23</h3>
-                                            <h3>People opened this course: 130</h3>
-                                            <h3>Earn XP: 3000</h3>
-                                        </div>
-                                    </div>
-
-                                    <div class="coursesList__item__image">
-                                        <img src="../Images/PHPLogo.png" alt="">
-                                    </div>
-
-                                    <div class="coursesList__item__body">
-                                        <h3 class="coursesList__item__body__header">PHP Course</h3>
-                                    </div>
-                                </div>
-                            </a>
                         </div>
                     </div>
                 </div>
@@ -316,7 +280,7 @@
 													}
 
 
-													
+
 												}
 											}
 										}
@@ -334,6 +298,7 @@
             </div>
         </div>
     </main>
+    <script type="text/javascript" src="~/js/createPB.js"></script>
     <script type="text/javascript" src="~/js/adaptiveProfile.js"></script>
     <script type="text/javascript" src="~/js/burger.js"></script>
     <script type="text/javascript" src="~/js/changeAvatar.js"></script>
