Added achievments images. Added achievments to Profile view. Changed width of registration form in Index page

--- a/Programmania/Views/Home/Index.cshtml
+++ b/Programmania/Views/Home/Index.cshtml
@@ -140,7 +140,7 @@
 
 
     <div class="modal" id="registerModal">
-        <div class="modal-content">
+        <div class="modal-content" style="width: 500px">
             <span class="close">&times;</span>
 
             <form name="registerForm" id="registerForm">
@@ -173,7 +173,7 @@
     </div>
 
     <div class="modal" id="loginModal">
-        <div class="modal-content">
+        <div class="modal-content" style="width: 500px">
             <span class="close">&times;</span>
 
             <form name="loginForm" id="loginForm">
