--- a/Programmania/wwwroot/css/Profile.css
+++ b/Programmania/wwwroot/css/Profile.css
@@ -409,6 +409,104 @@ body {
     color: red;
 }
 
+.achievments {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    flex-wrap: nowrap;
+}
+
+.achievments__part h1 {
+    font-size: 24px;
+}
+
+.achievments__part__main {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.achievment {
+    width: 32px;
+    height: 32px;
+    position: relative;
+}
+
+    .achievment:before,
+    .achievment:after {
+        display: block;
+        opacity: 0;
+        pointer-events: none;
+        position: absolute;
+    }
+
+    .achievment:after {
+        border-right: 6px solid transparent;
+        border-bottom: 6px solid rgba(0,0,0,.75);
+        border-left: 6px solid transparent;
+        content: '';
+        height: 0;
+        top: 29px;
+        left: 20px;
+        width: 0;
+        transform: scale3d(0,6px,0);
+        transition: all .1s ease-in-out;
+    }
+
+    .achievment:before {
+        background: rgba(0,0,0,.75);
+        border-radius: 2px;
+        color: #fff;
+        content: attr(data-title);
+        font-size: 14px;
+        padding: 6px 10px;
+        top: 35px;
+        left: -100px;
+        white-space: nowrap;
+        transform: scale3d(.2,.2,1);
+        transition: all .2s ease-in-out;
+    }
+
+    .achievment:hover:before,
+    .achievment:hover:after {
+        opacity: 1;
+        transform: scale3d(1,1,1);
+    }
+
+    .achievment:hover:after {
+        transition: all .2s .1s ease-in-out;
+    }
+
+    .achievment img {
+        width: 100%;
+        height: 100%;
+    }
+
+.achievmentProgress {
+    display: flex;
+    -moz-display: flex;
+    -ms-display: flex;
+    -o-display: flex;
+    -webkit-display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: nowrap;
+}
+
+    .achievmentProgress .achievment {
+        margin-left: 30px;
+    }
+
+    .achievmentProgress .progress {
+        height: 20px;
+        width: 70%;
+        margin-left: 10px;
+    }
+
+    .achievmentProgress h1 {
+        font-size: 24px;
+    }
+
 @media(max-width: 350px) {
     .coursesList__item {
         width: 200px;
@@ -421,6 +519,23 @@ body {
     .coursesList__item__hover__body {
         font-size: 14px;
     }
+
+    .achievments {
+        flex-direction: column;
+    }
+
+    .achievment {
+        margin: 0 auto;
+        margin-top: 40px;
+    }
+
+    .achievmentProgress {
+        flex-direction: column;
+    }
+
+        .achievmentProgress div, .achievmentProgress h1 {
+            margin-top: 20px;
+        }
 }
 
 @media(max-width: 230px) {
