--- a/Programmania/Views/Home/Profile.cshtml
+++ b/Programmania/Views/Home/Profile.cshtml
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"></script>
 
     <link rel="stylesheet" href="~/css/highlight styles/default.min.css">
-    <script src="~/css/highlight.min.js"></script>
+    <script src="~/js/highlight.min.js"></script>
     <script>hljs.highlightAll();</script>
 
 
@@ -162,141 +162,189 @@
                     <div class="col-md-8 mt-1">
                         <div class="card fixedCard">
                             <h1 class="titleText">
-                                Posts
+                                Achievments
                             </h1>
-                            <div class="card-body ">
-                                <div class="newsItem__title">
-                                    <a href="" class="newsItem__title__body">Example</a>
+                            <div class="card-body">
+                                <div class="achievments">
+                                    <div class="achievments__part">
+                                        <h1>Level achievments: </h1>
+                                        <hr>
+                                        <div class="achievments__part__main">
+                                            <div class="achievment achievment__level__1" data-title="Beginner - reach level 5">
+                                                <img src="../Images/Achievments/bronzeStar.svg" alt="">
+                                            </div>
+
+                                            <div class="achievment achievment__level__2" data-title="Advanced - reach level 20">
+                                                <img src="../Images/Achievments/greenStar.svg" alt="">
+                                            </div>
+
+                                            <div class="achievment achievment__level__3" data-title="Experienced - reach level 50">
+                                                <img src="../Images/Achievments/goldenStar.svg" alt="">
+                                            </div>
+
+                                            <div class="achievment achievment__level__4" data-title="Professional - reach level 100">
+                                                <img src="../Images/Achievments/brilliantStar.svg" alt="">
+                                            </div>
+                                        </div>
+                                        <hr>
+
+                                    </div>
+
+                                    <div class="achievments__part">
+                                        <h1>Challenge achievments: </h1>
+                                        <hr>
+                                        <div class="achievments__part__main">
+                                            <div class="achievment achievment__challenge__1" data-title="First win - win 1 game">
+                                                <img src="../Images/Achievments/bronzeMedal.svg" alt="">
+                                            </div>
+
+                                            <div class="achievment achievment__challenge__2" data-title="The smell of victory - win 10 games">
+                                                <img src="../Images/Achievments/silverMedal.svg" alt="">
+                                            </div>
+
+                                            <div class="achievment achievment__challenge__3" data-title="Life winner - win 50 games">
+                                                <img src="../Images/Achievments/goldenMedal.svg" alt="">
+                                            </div>
+                                        </div>
+                                        <hr>
+
+                                    </div>
+
+                                    <div class="achievments__part">
+                                        <h1>Course achievments: </h1>
+                                        <hr>
+                                        <div class="achievments__part__main">
+                                            <div class="achievment achievment__courses__1" data-title="Pupil - take your first course">
+                                                <img src="../Images/Achievments/bronzeBook.svg" alt="">
+                                            </div>
+
+                                            <div class="achievment achievment__courses__2" data-title="Student - take 3 courses">
+                                                <img src="../Images/Achievments/goldenBook.svg" alt="">
+                                            </div>
+
+                                            <div class="achievment achievment__courses__3" data-title="Teacher - take 5 courses">
+                                                <img src="../Images/Achievments/brilliantBook.svg" alt="">
+                                            </div>
+
+                                            <div class="achievment achievment__courses__4" data-title="Scientist - take 10 courses">
+                                                <img src="../Images/Achievments/goldenBooks.svg" alt="">
+                                            </div>
+
+                                            <div class="achievment achievment__courses__5" data-title="Know-it-all - take 20 courses">
+                                                <img src="../Images/Achievments/coloredBooks.svg" alt="">
+                                            </div>
+                                        </div>
+                                        <hr>
+
+                                    </div>
+
+                                    <div class="achievments__part">
+                                        <h1>Post achievments: </h1>
+                                        <hr>
+                                        <div class="achievments__part__main">
+                                            <div class="achievment achievment__posts__1" data-title="First publication - publish your first post">
+                                                <img src="../Images/Achievments/bronzeWriting.svg" alt="">
+                                            </div>
+
+                                            <div class="achievment achievment__posts__2" data-title="Writer - publish 5 posts">
+                                                <img src="../Images/Achievments/goldenWriting.svg" alt="">
+                                            </div>
+
+                                            <div class="achievment achievment__posts__3" data-title="Junior editor - publish 10 posts">
+                                                <img src="../Images/Achievments/brilliantWriting.svg" alt="">
+                                            </div>
+
+                                            <div class="achievment achievment__posts__4" data-title="Chief editor - publish 20 posts">
+                                                <img src="../Images/Achievments/goldenUpgradeWriting.svg" alt="">
+                                            </div>
+
+                                            <div class="achievment achievment__posts__5" data-title="Celebrity - publish 50 posts">
+                                                <img src="../Images/Achievments/greyUpgradeWriting.svg" alt="">
+                                            </div>
+                                        </div>
+                                        <hr>
+
+                                    </div>
+
+
                                 </div>
-
-
-                                <div class="newsItem__description">
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, voluptate, cum? Asperiores eaque sunt iure ut quos sapiente amet mollitia optio, pariatur repudiandae repellat illum, ex deleniti, non. Ducimus, minima!</p>
+                            </div>
+                            <h1 class="titleText">Next Achievments</h1>
+                            <hr>
+                            <div class="achievmentProgress">
+                                <div class="achievment achievment__posts__5" data-title="Celebrity - publish 50 posts">
+                                    <img src="../Images/Achievments/upgradeWriting.svg" alt="">
                                 </div>
-
-                                <div class="newsItem__image">
-                                    <img src="../Images/courseSlider.jpg" alt="">
+                                <div class="progress">
+                                    <div class="progress-bar bg-success" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
+                                <h1>40/50</h1>
+                            </div>
 
-                                <a href="" class="newsItem__button">
-                                    <span class="newsItem__button__text">View more</span>
-                                    <span class="newsItem__button__waves"></span>
+                            <hr>
+
+                        </div>
+                    </div>
+
+
+                    <div class="card mb-3 content activity ">
+                        <h1 class="m-3 titleText">Courses</h1>
+                        <div class="card-body">
+                            <div class="coursesList">
+                                <a href="#">
+                                    <div class="coursesList__item">
+                                        <div class="coursesList__item__hover">
+                                            <div class="coursesList__item__hover__body">
+                                                <h3>In progress</h3>
+                                                <div class="roundedPb">
+
+                                                </div>
+                                                <h3>Completed courses: 50/100</h3>
+                                            </div>
+                                        </div>
+
+                                        <div class="coursesList__item__image">
+                                            <img src="../Images/JavaLogo.png" alt="">
+                                        </div>
+
+                                        <div class="coursesList__item__body">
+                                            <h3 class="coursesList__item__body__header">Java</h3>
+                                        </div>
+                                    </div>
                                 </a>
                             </div>
                         </div>
                     </div>
-                </div>
+
+                    <div class="card mb-3 content activity fixedCard">
+                        <h1 class="m-3 titleText">Posts</h1>
+                        <div class="card-body">
+                            <div class="newsItem__title">
+                                <a href="" class="newsItem__title__body">Example</a>
+                            </div>
 
 
-                <div class="card mb-3 content activity">
-                    <h1 class="m-3 titleText">Courses</h1>
-                    <div class="card-body">
-                        <div class="coursesList">
-                            <a href="#">
-                                <div class="coursesList__item">
-                                    <div class="coursesList__item__hover">
-                                        <div class="coursesList__item__hover__body">
-                                            <h3>In progress</h3>
-                                            <div class="roundedPb">
+                            <div class="newsItem__description">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, voluptate, cum? Asperiores eaque sunt iure ut quos sapiente amet mollitia optio, pariatur repudiandae repellat illum, ex deleniti, non. Ducimus, minima!</p>
+                            </div>
 
-                                            </div>
-                                            <h3>Completed courses: 50/100</h3>
-                                        </div>
-                                    </div>
+                            <div class="newsItem__image">
+                                <img src="../Images/courseSlider.jpg" alt="">
+                            </div>
 
-                                    <div class="coursesList__item__image">
-                                        <img src="../Images/JavaLogo.png" alt="">
-                                    </div>
-
-                                    <div class="coursesList__item__body">
-                                        <h3 class="coursesList__item__body__header">Java</h3>
-                                    </div>
-                                </div>
+                            <a href="" class="newsItem__button">
+                                <span class="newsItem__button__text">View more</span>
+                                <span class="newsItem__button__waves"></span>
                             </a>
-
-
                         </div>
                     </div>
+
+
+
+
+
                 </div>
-
-
-
-                <div class="card mb-3 content activity">
-                    <h1 class="m-3 titleText">Codes</h1>
-                    <div class="card-body">
-                        <div class="code">
-                            <div class="code__header">
-                                <h3 href="#">C# Exceptions</h3>
-                            </div>
-
-                            <div class="code__content">
-                                <pre>
-                                <code class="language-c#">
-										using System;
-										using System.Collections.Generic;
-										using System.Linq;
-										using System.Text;
-										using System.Threading.Tasks;
-
-										namespace Lesson_7__Exceptions_
-										{
-											class Program
-											{
-												static void Main(string[] args)
-												{
-													int number_1 = 1;
-													int number_2 = 0;
-													try
-													{
-														int res = number_1 / number_2;
-													}
-													//Фильтрация исключений
-													catch(Exception ex) when (number_1 == 0)
-													{
-														Console.WriteLine("Number 1 mustn't be zero");
-													}
-													catch(Exception ex)
-													{
-														Console.WriteLine(ex.Message);
-													}
-													finally
-													{
-														Console.WriteLine("End of program");
-													}
-
-
-													User user = new User("John", "123");
-													string login = "John";
-													string pass = "234";
-
-													if (user.Login == login && user.Password == pass)
-													{
-														Console.WriteLine("User logged in");
-													}
-													else
-													{
-														UserException userException = new UserException("Login failed", DateTime.Now);   
-														throw userException;
-													}
-
-
-
-												}
-											}
-										}
-
-									</code>
-								</pre>
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
-
             </div>
-        </div>
     </main>
     <script type="text/javascript" src="~/js/createPB.js"></script>
     <script type="text/javascript" src="~/js/adaptiveProfile.js"></script>
