--- a/Programmania/wwwroot/css/Main.css
+++ b/Programmania/wwwroot/css/Main.css
@@ -144,16 +144,246 @@ body {
         transition: color 0.5s ease 0s;
     }
 
-        .allUsers li a.myPosition {
-            color: #6269de;
-        }
+.allUsers li a.myPosition {
+    color: #6269de;
+}
 
-        .allUsers li a:hover {
-            color: #ffd45f;
-        }
+.allUsers li a:hover {
+    color: #ffd45f;
+}
+
+.tile-title {
+    text-align: center;
+    font-size: 4vh;
+    color: #5c00a3;
+}
+
+.tile-body{
+    height: 400px;
+    border-radius: 40px;
+    overflow: auto;
+    position: relative;
+}
+
+/*Current Course*/
+
+.tile-currentCourse {
+    background-color: #e8aafa;
+}
+
+.tile-currentCourse__header {
+    text-align: center;
+    font-size: 5vh;
+    color: #750400;
+    margin-top: 20px;
+}
+
+.tile-currentCourse__hover {
+    margin-top: 20px;
+    height: 0;
+    opacity: 0;
+    width: 100%;
+    border-bottom-left-radius: 40px;
+    border-bottom-right-radius: 40px;
+    background: rgb(255,238,74);
+    background: linear-gradient(90deg, rgba(255,238,74,1) 31%, rgba(255,0,0,1) 100%);
+    transition: height 0.3s ease-in-out 0s, opacity 0.7s ease 0s;
+}
+
+.tile-currentCourse__hover h3{
+    text-align: center;
+    font-size: 3vh;
+    color: darkblue;
+}
+
+.tile-currentCourse:hover .tile-currentCourse__hover{
+    height: 70px;
+    opacity: 1;
+}
+
+.tile-currentCourse .ldBar path.mainLine {
+    stroke-width: 10;
+    stroke: #3c007d;
+    stroke-linecap: round;
+}
+
+.tile-currentCourse .ldBar path.baseLine {
+    stroke-width: 7;
+    stroke: #ffe959;
+    stroke-linecap: round;
+}
+
+.tile-currentCourse .ldBar-label {
+    font-size: 4vh;
+    color: #5c00a3;
+    font-weight: 700;
+}
+
+/*Courses*/
+
+.tile-courses {
+    background-color: #8e84fa;
+}
+
+.course{
+    margin: 0;
+    
+}
+
+.course__header{
+    text-align: center;
+    font-size: 5vh;
+    color: darkred;
+}
+
+.course__body{
+    width: 120px;
+    margin: 0 auto;
+}
+
+.course__body img{
+    width: 100%;
+}
+
+.tile-courses__hover {
+    position: absolute;
+    display: inline;
+    top: 0;
+    width: 100%;
+    height: 0;
+    opacity: 0;
+    border-radius: 40px;
+    background-color: rgba(79, 73, 140, .7);
+    transition: height 0.3s ease 0s, opacity 0.7s ease 0s;
+}
+
+.tile-courses:hover .tile-courses__hover{
+    height: 100%;
+    opacity: 1;
+}
+
+.course-hover__header {
+    text-align: center;
+    font-size: 5vh;
+    color: #dbb702;
+}
+
+.course-hover__body .ldBar path.mainLine {
+    stroke-width: 7;
+    stroke: #7d00d1;
+    stroke-linecap: round;
+}
+
+.course-hover__body .ldBar path.baseLine {
+    stroke-width: 7;
+    stroke: #d16c00;
+    stroke-linecap: round;
+}
+
+.course-hover__body .ldBar .ldBar-label {
+    font-size: 4vh;
+    color: #db7202;
+    font-weight: 700;
+}
+
+/*Perfomance*/
+.tile-perfomance {
+     background-color: #82ff9f;
+     padding: 20px;
+}
+
+.tile-perfomance__header {
+    font-size: 4vh;
+    color: #007a08;
+    text-align: center;
+}
+
+.tile-perfomance__body .ldBar path.mainLine {
+    stroke-width: 5;
+    stroke: #8c003f;
+    stroke-linecap: round;
+}
+
+
+.tile-perfomance__body .ldBar path.baseLine {
+    stroke-width: 3;
+    stroke: #5153f5;
+    stroke-linecap: round;
+}
+
+.tile-perfomance__body .ldBar .ldBar-label {
+    font-size: 4vh;
+    color: #2b0296;
+}
+
+
+/*Challenges*/
+
+.tile-challenges {
+    background-color: #ffbe82;
+    padding: 20px;
+}
+
+.challenge{
+    margin: 0 auto;
+    margin-top: 30px;
+}
+
+.challenge__text {
+    text-align: center;
+    font-size: 4vh;
+    color: #9e4a00;
+}
+
+.challenge__buttons{
+    display: flex;
+    flex-direction: row;
+    flex: 1 1 50.00%;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.confirmBtn, .denyBtn {
+    height: 50px;
+    border-radius: 40px;
+    text-align: center;
+    padding: 10px;
+    font-size: 3vh;
+
+}
+
+.confirmBtn {
+    background-color: #6efa32;
+    color: #820000;
+}
+
+.denyBtn {
+    background-color: #ff3333;
+    color: #ffc28c;
+}
+
+.denyBtn:hover{
+    cursor: pointer;
+}
+
+
+
+/*Posts*/
+
+.tile-posts {
+    background-color: #82fff9;
+}
+
+
+.ldBar{
+    margin: 0 auto;
+}
+
+
 
 .newsItem__title {
     text-align: center;
+
 }
 
 .newsItem__title__body {
@@ -279,6 +509,41 @@ body {
         -moz-animation: waves 10s infinite linear;
         -o-animation: waves 10s infinite linear;
     }
+
+::-webkit-scrollbar {
+    height: 1px;
+    width: 1px;
+    background-color: black;
+}
+
+@media(max-width: 988px) {
+    .confirmBtn {
+        margin-top: 20px;
+    }
+}
+
+@media(max-width: 768px) {
+    .confirmBtn {
+        margin-top: 0;
+    }
+}
+
+@media(max-width: 230px) {
+    .confirmBtn {
+        margin-top: 20px;
+    }
+}
+
+@keyframes denyAnimation{
+    0%{
+        margin-left: 0;
+        opacity: 1;
+    }
+    100%{
+        margin-left: 50px;
+        opacity: 0;
+    }
+}
 
 @keyframes waves {
     0% {
