1. Added perfomance page. 2. Added adaptive chart 3. Added adaptive history table 4. Added month changing in chart 5. Scripts associated with the page have been moved to java/util

--- a/Programmania/Views/Home/Courses.cshtml
+++ b/Programmania/Views/Home/Courses.cshtml
@@ -2,10 +2,14 @@
 <html>
 <head>
     <title>Courses</title>
-    <meta name="viewport" content="width=device-width">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="~/css/HamburgerMenu.css" />
     <link rel="stylesheet" href="~/css/Courses.css" />
+
+    <link rel="stylesheet" href="~/css/loading-bar.min.css" />
+    <script src="~/js/loading-bar.min.js"></script>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
@@ -51,74 +55,114 @@
 
     <main>
         <div class="content">
-            <div class="coursesList">
-                <a href="#">
-                    <div class="coursesList__item">
-                        <div class="coursesList__item__hover">
-                            <div class="coursesList__item__hover__body">
-                                <h3>Leksions count: 23</h3>
-                                <h3>Progress: 12%</h3>
-                                <h3>Completed leksion: 5/23</h3>
-                                <h3>People opened this course: 130</h3>
-                                <h3>Earn XP: 3000</h3>
+            <div class="main">
+                <div class="card mb-3">
+                    <div class="coursesList">
+
+
+
+                        <a href="#">
+                            <div class="coursesList__item">
+                                <div class="coursesList__item__hover">
+                                    <div class="coursesList__item__hover__body">
+                                        <div class="roundedPb">
+                                            
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="coursesList__item__image">
+                                    <img src="../Images/JSLogo.png" alt="">
+                                </div>
+
+                                <div class="coursesList__item__body">
+                                    <h3>JavaScript course</h3>
+                                </div>
+
+                                <div class="coursesList__item__footer">
+                                    <h3>Leksions count: 23</h3>
+                                    <h3>Progress: 12%</h3>
+                                    <h3>Completed leksion: 5/23</h3>
+                                    <h3>People opened this course: 130</h3>
+                                    <h3>Earn XP: 3000</h3>
+
+
+                                </div>
+
+
                             </div>
-                        </div>
-                        <div class="coursesList__item__image">
-                            <img src="../Images/JavaLogo.png" alt="">
-                        </div>
+                        </a>
 
-                        <div class="coursesList__item__body">
-                            <h3 class="coursesList__item__body__header">Java course</h3>
-                        </div>
-                    </div>
-                </a>
+                        <a href="#">
+                            <div class="coursesList__item">
+                                <div class="coursesList__item__hover">
+                                    <div class="coursesList__item__hover__body">
+                                        <div class="roundedPb">
+                                            
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="coursesList__item__image">
+                                    <img src="../Images/JSLogo.png" alt="">
+                                </div>
+
+                                <div class="coursesList__item__body">
+                                    <h3>JavaScript course</h3>
+                                </div>
+
+                                <div class="coursesList__item__footer">
+                                    <h3>Leksions count: 23</h3>
+                                    <h3>Progress: 12%</h3>
+                                    <h3>Completed leksion: 5/23</h3>
+                                    <h3>People opened this course: 130</h3>
+                                    <h3>Earn XP: 3000</h3>
 
 
-                <a href="#">
-                    <div class="coursesList__item">
-                        <div class="coursesList__item__hover">
-                            <div class="coursesList__item__hover__body">
-                                <h3>Leksions count: 23</h3>
-                                <h3>Progress: 12%</h3>
-                                <h3>Completed leksion: 5/23</h3>
-                                <h3>People opened this course: 130</h3>
-                                <h3>Earn XP: 3000</h3>
+                                </div>
+
+
                             </div>
-                        </div>
-                        <div class="coursesList__item__image">
-                            <img src="../Images/JSLogo.png" alt="">
-                        </div>
+                        </a>
 
-                        <div class="coursesList__item__body">
-                            <h3 class="coursesList__item__body__header">JavaScript course</h3>
-                        </div>
-                    </div>
-                </a>
+                        <a href="#">
+                            <div class="coursesList__item">
+                                <div class="coursesList__item__hover">
+                                    <div class="coursesList__item__hover__body">
+                                        <div class="roundedPb">
+                                            
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="coursesList__item__image">
+                                    <img src="../Images/JSLogo.png" alt="">
+                                </div>
 
-                <a href="#">
-                    <div class="coursesList__item">
-                        <div class="coursesList__item__hover">
-                            <div class="coursesList__item__hover__body">
-                                <h3>Leksions count: 23</h3>
-                                <h3>Progress: 12%</h3>
-                                <h3>Completed leksion: 5/23</h3>
-                                <h3>People opened this course: 130</h3>
-                                <h3>Earn XP: 3000</h3>
+                                <div class="coursesList__item__body">
+                                    <h3>JavaScript course</h3>
+                                </div>
+
+                                <div class="coursesList__item__footer">
+                                    <h3>Leksions count: 23</h3>
+                                    <h3>Progress: 12%</h3>
+                                    <h3>Completed leksion: 5/23</h3>
+                                    <h3>People opened this course: 130</h3>
+                                    <h3>Earn XP: 3000</h3>
+
+
+                                </div>
+
+
                             </div>
-                        </div>
-                        <div class="coursesList__item__image">
-                            <img src="../Images/PHPLogo.png" alt="">
-                        </div>
+                        </a>
 
-                        <div class="coursesList__item__body">
-                            <h3 class="coursesList__item__body__header">PHP course</h3>
-                        </div>
+
                     </div>
-                </a>
+                </div>
             </div>
+
         </div>
     </main>
 
-    <script type="text/javascript" src="~/js/burger.js"></script>
+    <script type="text/javascript" src="~/js/util/burger.js"></script>
+    <script type="text/javascript" src="~/js/util/createPB.js"></script>
 </body>
 </html>																																					
