--- a/Programmania/Views/Home/Index.cshtml
+++ b/Programmania/Views/Home/Index.cshtml
@@ -285,9 +285,9 @@
 
     <script type="application/javascript" src="~/js/setAvatarImage.js"></script>
     <script type="application/javascript" src="~/js/logReg.js"></script>
-    <script type="application/javascript" src="~/js/openModal.js"></script>
-    <script type="application/javascript" src="~/js/slider.js"></script>
-    <script type="application/javascript" src="~/js/scrollAnimation.js"></script>
+    <script type="application/javascript" src="~/js/util/openModal.js"></script>
+    <script type="application/javascript" src="~/js/util/slider.js"></script>
+    <script type="application/javascript" src="~/js/util/scrollAnimation.js"></script>
 </body>
 
 </html>
