--- a/Programmania/Views/Home/News.cshtml
+++ b/Programmania/Views/Home/News.cshtml
@@ -81,6 +81,6 @@
         </div>
     </main>
 
-    <script type="text/javascript" src="~/js/burger.js"></script>
+    <script type="text/javascript" src="~/js/util/burger.js"></script>
 </body>
 </html>
