--- a/Programmania/Views/Home/PostNews.cshtml
+++ b/Programmania/Views/Home/PostNews.cshtml
@@ -95,6 +95,6 @@
     </div>
 
     <script src="https://use.fontawesome.com/a31a3f8384.js"></script>
-    <script type="text/javascript" src="~/js/postNews.js"></script>
+    <script type="text/javascript" src="~/js/util/postNews.js"></script>
 </body>
 </html>
