--- a/Programmania/Views/Home/Profile.cshtml
+++ b/Programmania/Views/Home/Profile.cshtml
@@ -346,9 +346,8 @@
                 </div>
             </div>
     </main>
-    <script type="text/javascript" src="~/js/createPB.js"></script>
-    <script type="text/javascript" src="~/js/adaptiveProfile.js"></script>
-    <script type="text/javascript" src="~/js/burger.js"></script>
+    <script type="text/javascript" src="~/js/util/createPB.js"></script>
+    <script type="text/javascript" src="~/js/util/burger.js"></script>
     <script type="text/javascript" src="~/js/changeAvatar.js"></script>
 
 </body>
