--- a/Programmania/Views/Home/Challenges.cshtml
+++ b/Programmania/Views/Home/Challenges.cshtml
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"></script>
 
     <link rel="stylesheet" href="~/css/Challenges.css">
-    <link rel="stylesheet" href="../css/HamburgerMenu.css">
+    <link rel="stylesheet" href="~/css/HamburgerMenu.css">
 
 
 
@@ -122,7 +122,7 @@
 
     </main>
 
-    <script type="text/javascript" src="~/js/burger.js"></script>
+    <script type="text/javascript" src="~/js/util/burger.js"></script>
 
     <script type="text/javascript">
         var coll = document.getElementsByClassName("gameResult__btn");
