--- a/Programmania/Views/Home/Main.cshtml
+++ b/Programmania/Views/Home/Main.cshtml
@@ -101,8 +101,8 @@
                     </div>
                 </div>
 
-                <div class="row">
-                    <div class="col-md-3 mt-1 tile">
+                <div class="row tilesCard">
+                    <div class="col-md-4 mt-1 tile">
                         <h3 class="tile-title">Current Course</h3>
                         <div class="tile-body tile-currentCourse">
                             <a>
@@ -125,7 +125,7 @@
 
                     </div>
 
-                    <div class="col-md-3 mt-1 tile">
+                    <div class="col-md-4 mt-1 tile">
                         <h3 class="tile-title">Courses</h3>
                         <a>
                             <div class="tile-body tile-courses">
@@ -185,7 +185,7 @@
 
 
 
-                    <div class="col-md-3 mt-1 tile">
+                    <div class="col-md-4 mt-1 tile">
                         <h3 class="tile-title">Perfomance</h3>
                         <a>
                             <div class="tile-body tile-perfomance">
@@ -204,7 +204,7 @@
                         </a>
                     </div>
 
-                    <div class="col-md-3 mt-1 tile">
+                    <div class="col-md-4 mt-1 tile">
                         <h3 class="tile-title">Challenges</h3>
 
 
@@ -268,7 +268,7 @@
 
                     </div>
 
-                    <div class="col-md-3 mt-1 tile">
+                    <div class="col-md-4 mt-1 tile">
                         <h3 class="tile-title">Posts</h3>
                         <a>
                             <div class="tile-body tile-posts">
@@ -310,6 +310,6 @@
     </main>
 </body>
 
-<script type="text/javascript" src="~/js/burger.js"></script>
+<script type="text/javascript" src="~/js/util/burger.js"></script>
 <script type="text/javascript" src="~/js/denyBtnClick.js"></script>
 </html>  
