--- a/Programmania/wwwroot/css/Main.css
+++ b/Programmania/wwwroot/css/Main.css
@@ -83,7 +83,10 @@ h1, h2, h3, h4, h5, h6 {
 
 body {
     margin-top: 20px;
-    background-color: #defafa;
+    background: url("../images/mainBackground.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
 }
 
 .content {
@@ -96,6 +99,7 @@ body {
     flex-direction: column;
     border-radius: 40px;
     padding: 50px;
+    background-color: rgba(227, 196, 163, .7);
 }
 
 .row {
@@ -139,7 +143,7 @@ body {
 
     .allUsers li a {
         font-size: 20px;
-        color: darkgray;
+        color: #383838;
         transition: color 0.5s ease 0s;
     }
 
@@ -147,17 +151,22 @@ body {
     color: #6269de;
 }
 
-.allUsers li a:hover {
-    color: #ffd45f;
-}
+        .allUsers li a:hover {
+            color: #ffd445;
+        }
 
 .tilesCard{
-    padding: 100px;
+    padding: 40px;
+
 }
 
-.tile{
+.tile {
     width: 300px;
-    margin-left: 30px;
+    margin-left: 40px;
+    background-color: rgba(217, 217, 217, .7);
+    border-radius: 40px;
+    padding: 0;
+    margin-top: 30px;
 }
 
 .tile-title {
@@ -174,10 +183,6 @@ body {
 }
 
 /*Current Course*/
-
-.tile-currentCourse {
-    background-color: #e8aafa;
-}
 
 .tile-currentCourse__header {
     text-align: center;
@@ -228,11 +233,6 @@ body {
 }
 
 /*Courses*/
-
-.tile-courses {
-    background-color: #8e84fa;
-}
-
 .course{
     margin: 0;
     
@@ -296,7 +296,6 @@ body {
 
 /*Perfomance*/
 .tile-perfomance {
-     background-color: #82ff9f;
      padding: 20px;
 }
 
@@ -328,7 +327,6 @@ body {
 /*Challenges*/
 
 .tile-challenges {
-    background-color: #ffbe82;
     padding: 20px;
 }
 
@@ -378,9 +376,6 @@ body {
 
 /*Posts*/
 
-.tile-posts {
-    background-color: #82fff9;
-}
 
 
 .ldBar{
@@ -528,6 +523,7 @@ body {
     .confirmBtn {
         margin-top: 20px;
     }
+    
 }
 
 @media(max-width: 768px) {
@@ -538,13 +534,14 @@ body {
 
 @media(max-width: 600px) {
     .tilesCard {
-        padding: 50px;
+        padding: 0px;
+        margin-left: 0;
     }
 }
 
 @media(max-width: 300px) {
     .tilesCard{
-        padding: 25px;
+        
     }
 }
 
