Model.File swapped to Model.Image

--- a/Programmania/Views/Home/Partials/CoursePartial.cshtml
+++ b/Programmania/Views/Home/Partials/CoursePartial.cshtml
@@ -14,7 +14,7 @@
             </div>
 
             <div class="coursesList__item__image">
-                <img src="@($"data:image/*;base64," + System.Convert.ToBase64String(Model.File))" alt="" width="100" height="100">
+                <img src="@($"data:image/*;base64," + System.Convert.ToBase64String(Model.Image))" alt="" width="100" height="100">
             </div>
 
             <div class="coursesList__item__body">
